manifests/adguard-home/adguard-home.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-home-deployment
  namespace: adguard-home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard-home
  template:
    metadata:
      labels:
        app: adguard-home
    spec:
      containers:
        - name: adguard-home
          image: adguard/adguardhome
          ports:
            - containerPort: 3000
              protocol: TCP
            - containerPort: 53
              protocol: UDP
            - containerPort: 53
              protocol: TCP
            - containerPort: 853
              protocol: TCP
          volumeMounts:
            - name: adguardhome-data
              mountPath: /opt/adguardhome/work
            - name: adguardhome-data
              mountPath: /opt/adguardhome/conf
      volumes:
        - name: adguardhome-data
          persistentVolumeClaim:
            claimName: adguardhome-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-service
  namespace: adguard-home
spec:
  type: ClusterIP
  selector:
    app: adguard-home
  ports:
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: web-ui
      port: 3000
      targetPort: 3000
      protocol: TCP
    - name: dns-over-tls
      port: 853
      targetPort: 853
      protocol: TCP
# ---
# apiVersion: tailscale.com/v1alpha1
# kind: Connector
# metadata:
#   name: appc-adguard
# spec:
#   appConnector: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-ui-ingress
  namespace: adguard-home
  annotations:
    kubernetes.io/ingress.class: tailscale
    cert-manager.io/cluster-issuer: letsencrypt-prod-cloudflare
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
      - adguard.seanchoo.top
      secretName: adguard-tls
  rules:
  - host: adguard.seanchoo.top
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adguard-home-service
            port:
              name: web-ui
